--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 # Ignore the node_modules directory
 node_modules/
-public/
+
+
+# Ignore images directory
+public/images/
+
 
 # Ignore environment-specific files
 .env
